Fixed horizontal spacing for images of hero container

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -23,8 +23,8 @@
 
 #hero-container-desktop {
     padding-top: 0px;
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: -50px;
+    margin-right: -50px;
     margin-bottom: 0;
 }
 
